--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet/less" href="style.less">
+	<link rel="stylesheet/less" href="resetEM.css">
+	<script type="text/javascript" src="less.js" ></script>
 	<script type="text/javascript" src="application.js" ></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<meta charset="UTF-8">
