--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet/less" href="style.less">
-	<link rel="stylesheet/less" href="resetEM.css">
-	<script type="text/javascript" src="less.js" ></script>
-	<script type="text/javascript" src="application.js" ></script>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+	
+	<!--[if gte IE 6]>
+		<link href="css/style_ie.css" rel="stylesheet" type="text/css" />
+	<![endif]-->
+	 
+	<!--[if lte IE 8]>
+		<script>
+			document.createElement('header');
+			document.createElement('nav');
+			document.createElement('aside');
+			document.createElement('section');
+			document.createElement('footer');
+		</script>
+	<![endif]-->
+
+	<!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <!--[if gte IE 9]>
+  		<style type="text/css">
+    		.gradient {
+       			filter: none;
+    		}
+  		</style>
+	<![endif]-->
+	
+	<link rel="stylesheet/less" href="css/style.less" />
+	<link rel="stylesheet/css" href="css/resetEM.css" />
+
+
+
+
+	<script type="text/javascript" src="js/less.js" ></script>
+	<script type="text/javascript" src="js/application.js" ></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<meta charset="UTF-8">
+
+
+
 	<title>VDMH</title>
 </head>
 <body>
