--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="#" />
+    <meta name="description" content="#155" />
+    <meta name="keywords" content="#" />
     <meta name="author" content="VDMX" />	
 		<!--[if gte IE 6]>
 			<link href="css/style_ie.css" rel="stylesheet" type="text/css" />
@@ -28,17 +29,42 @@
 	       			filter: none;
 	    		}
 	  		</style>
-		<![endif]-->	
-		<link rel="stylesheet/less" href="css/style.less" />
+		<![endif]-->
+		<!--[if lt IE 9]> 
+ 			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> 
+		<![endif]-->
+		<link media="screen"rel="stylesheet/less" href="css/style.less" />
 		<link rel="stylesheet/css" href="css/resetEM.css" />
 		<script type="text/javascript" src="js/less.js" ></script>
-		<script type="text/javascript" src="js/application.js" ></script>
+		<script type="text/javascript" src="js/application.js"></script>
+		<script type="text/javascript" src="js/blur.min.js"></script>
+
+		<script type="text/javascript" src="js/PIE_IE678.js"></script>
+		<script type="text/javascript" src="js/PIE_IE678_uncompressed.js"></script>
+		<script type="text/javascript" src="js/PIE_IE9.js"></script>
+		<script type="text/javascript" src="js/PIE_IE9_uncompressed.js"></script>
+
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		<title>VDMH</title>
+		<title>VDMH 60</title>
 </head>
 <body>
 	<header>
-		<div class="header_pic"></div>		
+
+		<figure>
+			<div class="heading">
+				<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis, fugit, aliquam. Animi a sint perspiciatis consequatur ex harum, error impedit eum qui saepe pariatur quo aperiam velit vel, accusantium illum.</h1>
+			</div>
+			<figcaption>logo</figcaption>
+			<div class="header_pic"></div>
+			<img src="/img/symb.png" alt="Логотип"/>
+			<video src="video/vdmh.mp4" autoplay="autoplay" loop="loop"></video>
+		</figure>
+		
+		<hgroup>
+			<h1>1</h1>
+			<h2></h2>
+		</hgroup>
+				
 	</header>
 	<nav>
 		<!-- ul>(li>a>())*5 -->
@@ -60,7 +86,10 @@
 		</ul>
 	</aside>
 	<section>
-		
+		<h2></h2>
+		<article>
+			
+		</article>
 	</section>
 	<footer>
 		<ul>
