--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 		<![endif]-->
 		<link media="screen"rel="stylesheet/less" href="css/style.less" />
 		<link rel="stylesheet/css" href="css/resetEM.css" />
+
+		<script src="https://code.jquery.com/jquery-1.11.2.js"></script>
+
 		<script type="text/javascript" src="js/less.js" ></script>
 		<script type="text/javascript" src="js/application.js"></script>
 		<script type="text/javascript" src="js/blur.min.js"></script>
@@ -44,7 +47,7 @@
 		<script type="text/javascript" src="js/PIE_IE9.js"></script>
 		<script type="text/javascript" src="js/PIE_IE9_uncompressed.js"></script>
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		
 		<title>VDMH 60</title>
 </head>
 <body>
