--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="#155" />
-    <meta name="keywords" content="#" />
+    <meta name="keywords" content="#10-15" />
     <meta name="author" content="VDMX" />	
-		<!--[if gte IE 6]>
-			<link href="css/style_ie.css" rel="stylesheet" type="text/css" />
-		<![endif]-->	 
+    <meta http-equiv="content-langyage" content="ru" />
+		<meta http-equiv="content-langyage" content="en" />
+		<meta http-equiv="content-script-type" content="text/javascript" />
+		<meta http-equiv="content-style-type" content="text/css" />
+		<meta name="keyword" content="Perfect,word,pw" lang="en" />
+		<meta name="keyword" content="пв,квесты,рай,ад" lang="ru" />
+		<meta name="robots" content="index" />
+			 
 		<!--[if lte IE 8]>
 			<script>
 				document.createElement('header');
@@ -40,7 +45,9 @@
 
 		<script type="text/javascript" src="js/less.js" ></script>
 		<script type="text/javascript" src="js/application.js"></script>
+		<script type="text/javascript" src="js/blur.js"></script>
 		<script type="text/javascript" src="js/blur.min.js"></script>
+		<script type="text/javascript" src="js/blur.dev.js"></script>
 
 		<script type="text/javascript" src="js/PIE_IE678.js"></script>
 		<script type="text/javascript" src="js/PIE_IE678_uncompressed.js"></script>
@@ -59,7 +66,7 @@
 			</div>
 			<figcaption>logo</figcaption>
 			<div class="header_pic"></div>
-			<img src="/img/symb.png" alt="Логотип"/>
+
 			<video src="video/vdmh.mp4" autoplay="autoplay" loop="loop"></video>
 		</figure>
 		
